k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: supemir-web
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - your_domain.com
        - www.your_domain.com
      secretName: supemir-tls
  rules:
    - host: your_domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: supemir-web
                port:
                  number: 80
    - host: www.your_domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: supemir-web
                port:
                  number: 80
